# chash

./: .arcconfig  .arclint  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  add_commit_dates.py  autoCreateLog.sh  chashutil.py  clang-hash-global  clang_hash_global.py  dependency_analyzer  evaluate_data_with_stop.py  example.c  run_test_project.py  run_test_with_stopping.py  test_project.py  validate_hashes.py
clang-plugin/: .Hash.h.swp  .hash-visitor.cc.swp  AttrDataCollectors.inc  AttrDataCollectors.td  CMakeLists.txt  DeclDataCollectors.inc  DeclDataCollectors.td  Hash.h  MurMurHash3.h  SHA1.h  StmtDataCollectors.inc  StmtDataCollectors.td  TypeDataCollectors.inc  TypeDataCollectors.td  clang-hash.cc  hash-visitor.cc  hash-visitor.h
experiments/: Makefile  analyze_results.py  chashutil.py  clang_hash_global.py  dependency_analyzer.py  global_historical_build.py  global_historical_evaluate_call_graph.py  global_historical_evaluate_global.py  global_historical_evaluate_local.py  historical_build.py  incremental_rebuild.py  lib.py  plots.py  timing-internal.py  validate_hashes.py
freebsd/: make.conf.normal  src.conf.normal
gcc-plugin/: CMakeLists.txt  Hash.h  MurMurHash3.h  ast.dot  chash.cc  chash.h  dump.cc  gcc-common.h  gcc-show-ast  test.c  test.c.003t.original
global_test/functions/: extern_func.c  extern_var.c  func_ptr_call.c  function_calls.c  function_ptr.c  global_user.c  no_references.c  non_defined_function.c  recursion.c
global_test/variables/: pointer.c
src/: CMakeLists.txt  Hash.h  MurMurHash3.h  SHA1.h  clang-hash.cc  clang-hash.in  hash-visitor.cc  hash-visitor.h
test/: .gitignore  BUG.c  always-fail.c  bb_goto_dotdot.c  bb_goto_dotdot_6.c  const_1.c  const_pointer.c  failing_test.c  global_builtin.c  global_builtin_pointer.c  invocation.c  make.sh  run-tests  sizeof_test.c  static_1.c  struct_2.c  test_always-fail.sh  types.c  volatile_1.c
test/TODO_sort/: NullStmt_1.c  inline_assembler.c  va_arg.c
test/abort_compilation/: test_abort.sh
test/assignments/: assign_and_operator.c  assign_cast.c  assign_charlit.c  assign_div.c  assign_flit1.c  assign_flit3.c  assign_impl_cast.c  assign_intlit_3.c  assign_listarrayMD.c  assign_mal.c  assign_minus.c  assign_plus.c  assign_pos_vs_neg.c  assign_strlit2.c  assign_struct_initlist_2.c  assign_wchar_t_lit.c  literals.c
test/control_flow/: LabelStmt_1.c  LabelStmt_2.c  logical_stuff1.c  logical_stuff2.c  logical_stuff3.c
test/declarations/: DeclStmt_1.c  DeclStmt_2.c  FunctionPointer.c  array_1.c  array_2.c  array_3.c  array_md_switched_dimensions.c  array_var1.c  funcdecl_unused.c  funcdecl_used.c  global_builtin.c  global_builtin_2.c  global_builtin_3.c  global_builtin_pointer.c  inttypes_1.c  long_and_long_long.c  long_double.c  pointer_pointer.c  typedecls_unused.c  typedecls_used.c  typeof.c  typeof_int.c  types.c  types_atomic.c  types_atomic_accessed.c  types_atomic_not_accessed.c  types_complex.c
test/enumAndStuff/: unusedEnum.c  unusedEnumConstant.c  unusedEnumConstant2.c
test/enums/: enum_direct_usage.c  enum_switched_order.c  unusedEnum.c  unusedEnumConstant.c  unusedEnumConstant_typedeffed.c
test/export_def_use/: always_fail_1.c  always_fail_2.c
test/expressions/: arrayaccess.c  assign_1.c  assign_base.c  assign_cast.c  assign_charlit.c  assign_cond.c  assign_desinit.c  assign_div.c  assign_flit1.c  assign_flit2.c  assign_imglit.c  assign_impl_cast.c  assign_listarray.c  assign_listarrayMD.c  assign_mal.c  assign_minun.c  assign_minus.c  assign_peter.c  assign_peterMD.c  assign_plus.c  assign_stmtexpr.c  assign_strlit.c  assign_strlit2.c  assign_unnot.c  complex_pointer_1.c  distinguish_post_and_prefix_inc.c  distinguish_post_and_prefix_inc2.c  member_expr.c  offsetof_array.c  offsetof_struct.c  sizeof_test.c
test/fail_not_in_subdirectories/: include_1.c  include_1.h  include_2.c
test/functions/: BreakStmt_1.c  BreakStmt_2.c  BreakStmt_3.c  BreakStmt_4.c  BreakStmt_5.c  CCrossRecursion.c  CallExpr.c  ContinueStmt_1.c  ContinueStmt_2.c  ContinueStmt_3.c  ContinueStmt_4.c  ContinueStmt_5.c  CrossRecursion.c  CrossRecursion_1.c  CrossRecursion_2.c  DeclStmt_1.c  DeclStmt_2.c  DoStmt_1.c  DoStmt_2.c  FP.c  ForStmt_1.c  ForStmt_2.c  ForStmt_3.c  ForStmt_4.c  ForStmt_5.c  GotoStmt_1.c  GotoStmt_2.c  GotoStmt_3.c  GotoStmt_4.c  IfStmt_1.c  IfStmt_10.c  IfStmt_11.c  IfStmt_2.c  IfStmt_3.c  IfStmt_4.c  IfStmt_5.c  IfStmt_6.c  IfStmt_7.c  IfStmt_8.c  IfStmt_9.c  (+23 more)
test/global/: arrayMD.c  array_1.c  array_2.c  array_var1.c  enum1.c  global_builtin.c  global_builtin_2.c  global_builtin_Z.c  global_builtin_pointer.c  inline_assembler.c  pointer_pointer.c  typeof.c  typeof_int.c  types.c  types_atomic.c  types_complex.c
test/global_hash/: global_hash.sh  test_always-fail_2.sh  test_always-fail_3.sh  test_simple_change_1.sh  test_simple_change_3.sh
test/includes/: inc_stdio.c  include_1.c  include_1.h  include_not_used_library_function.c  unterordner.c  use_stdlib.c  useless_dynamic_includes.c
test/other/: block.c  va_arg.c
test/preprocessor/: header.h  header_extern_2.h  include.c  include_1.c  include_2.c  include_3.c  include_c.c  include_extern_impl_1.c  include_extern_impl_2.c  include_extern_impl_3.c  unused_include_stdint_1.c  unused_include_stdint_2.c  unused_include_stdio_1.c  use_stdio.c  useless_dynamic_includes.c
test/qualifiers/: const_1.c  const_2.c  const_3.c  const_later.c  const_lukas.c  const_pointer.c  extern_function.c  extern_function_usage.c  extern_int1.c  extern_int2.c  extern_variable.c  extern_variable_usage.c  static_1.c  static_2.c  vector.c  volatile_1.c
test/structs/: attributed_1.c  attributed_2.c  bitfield.c  nested_structs.c  peterMD.c  return_ptr.c  size_of_own_declaration.c  size_of_own_declaration_ptr.c  struct_1.c  struct_2.c  struct_3.c  struct_4.c  struct_instances.c  struct_rek1.c  union.c  (+3 more)
wrappers/: CMakeLists.txt  REAME.busybox  clang-ccache-hash-stop.in  clang-ccache.in  clang-hash-collect.in  clang-hash-stop.in  clang-hash.in  clang-normal.in  clang.in  compare-logs  gcc  gcc-fpr.in  gcc-hash.in  gcc-time  gcc.in  hash-objectfile
(+167 files in other folders)
